--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ main{
     max-width: 1200px;
     display: grid;
     grid-template-areas: "h h h"
-                         "a a a"
-                         "f f f";
+                         "a a a";
     grid-template-columns: 1fr 1fr 1fr;
 }
 header{
